--- a/app/scripts/modules/kubernetes/src/v2/pipelines/stages/deleteManifest/deleteManifestConfig.html
+++ b/app/scripts/modules/kubernetes/src/v2/pipelines/stages/deleteManifest/deleteManifestConfig.html
@@ -5,6 +5,7 @@
   <h4>Manifest</h4>
   <div class="horizontal-rule"></div>
   <kubernetes-multi-manifest-selector selector="ctrl.$scope.stage"></kubernetes-multi-manifest-selector>
+  <kubernetes-manifest-selector multi-select="true" selector="ctrl.$scope.stage"></kubernetes-manifest-selector>
   <h4>Settings</h4>
   <div class="horizontal-rule"></div>
   <kubernetes-delete-manifest-options-form options="ctrl.$scope.stage.options"></kubernetes-delete-manifest-options-form>
